RESOLVED FIXED149845
[Mac] REGRESSION(r173318): Seeks never complete for media loaded with QTKit.
https://bugs.webkit.org/show_bug.cgi?id=149845
Summary [Mac] REGRESSION(r173318): Seeks never complete for media loaded with QTKit.
Jer Noble
Reported 2015-10-06 09:12:14 PDT
[Mac] REGRESSION(r173318): Seeks never complete for media loaded with QTKit.
Attachments
Patch (1.83 KB, patch)
2015-10-06 09:16 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2015-10-06 09:16:10 PDT
WebKit Commit Bot
Comment 2 2015-10-06 18:25:25 PDT
Comment on attachment 262515 [details] Patch Clearing flags on attachment: 262515 Committed r190655: <http://trac.webkit.org/changeset/190655>
WebKit Commit Bot
Comment 3 2015-10-06 18:25:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.