[Mac] REGRESSION(r173318): Seeks never complete for media loaded with QTKit. https://bugs.webkit.org/show_bug.cgi?id=149845

Reviewed by Darin Adler.

When converting from time-as-double to MediaTime, a regression was introduced
when checking whether m_seekTo was set to a valid value or not. The clause
`time != -1` should be translated to `time.isValid()`, not `!time.isValid()`.

* platform/graphics/mac/MediaPlayerPrivateQTKit.mm:
(WebCore::MediaPlayerPrivateQTKit::timeChanged):


Canonical link: https://commits.webkit.org/168000@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190655 268f45cc-cd09-0410-ab3c-d52691b4dbfc